(CRP) Some final edits w/ regard ST feedback-processed version.

--- a/Thesis/PackagesNewCommands/packages_newcommands.tex
+++ b/Thesis/PackagesNewCommands/packages_newcommands.tex
@@ -45,6 +45,8 @@
 \newcommand{\todo}[1]{\textcolor{red}{ToDo: #1}}
 % red text
 \newcommand{\blue}[1]{\textcolor{blue}{#1}}
+% shortcut for underlining text and red
+\newcommand{\e}[1]{\underline{\textcolor{red}{#1}}}
 % missing reference. set argument to empty if ref. not known
 \newcommand{\missref}[1]{\ifthenelse{\equal{#1}{}}{\hl{[ref?]}}{\hl{[ref: #1 ]}}}
 
