--- a/Thesis/PackagesNewCommands/packages_newcommands.tex
+++ b/Thesis/PackagesNewCommands/packages_newcommands.tex
@@ -46,7 +46,7 @@
 % red text
 \newcommand{\blue}[1]{\textcolor{blue}{#1}}
 % shortcut for underlining text and red
-\newcommand{\e}[1]{\underline{\textcolor{red}{#1}}}
+\newcommand{\e}[1]{\textcolor{red}{#1}}
 % missing reference. set argument to empty if ref. not known
 \newcommand{\missref}[1]{\ifthenelse{\equal{#1}{}}{\hl{[ref?]}}{\hl{[ref: #1 ]}}}
 
