(translations) Intro+concl > NL

--- a/Thesis/dissertation.tex
+++ b/Thesis/dissertation.tex
@@ -104,6 +104,7 @@
 %% the title page (in title/title.tex) and in the metadata of the final PDF.
 %\title{Fluctuation and regulation}
 \title{Dynamical regulation in bacterial cells}
+\title{Dynamical regulation in single cells}
 \author{Martijn}{Wehrens} %in title page: author added manually (uppercase!)
 
 %% Use Roman numerals for the page numbers of the title pages and table of
@@ -133,28 +134,29 @@
 \include{Chapter0_Preface_etc/preface_etc}
 \include{Chapter1_Introduction/chapter1_introduction}
 \include{Chapter1_Introduction/chapter1_introductie_NL}
-\include{Chapter2_Methods/chapter2_methods} % \label{chapter:methods}
+%\include{Chapter2_Methods/chapter2_methods} % \label{chapter:methods}
 
 % FILA RECOVERY
-\include{ChapterX_Filarecovery/ChapterX_Filarecovery} % \label{chapter:filarecovery}
-\include{ChapterX_Filarecovery/SupplementalData_ThesisVersion}
+%\include{ChapterX_Filarecovery/ChapterX_Filarecovery} % \label{chapter:filarecovery}
+%\include{ChapterX_Filarecovery/SupplementalData_ThesisVersion}
 
 % LITERATURE REVIEW
-\include{ChapterX_Literaturereview/ChapterX_Literaturereview} % \label{chapter:literaturereview}
+%\include{ChapterX_Literaturereview/ChapterX_Literaturereview} % \label{chapter:literaturereview}
 
 % CRP chapter
-\include{ChapterX_CRP/CRP_main} %\label{chapter:CRP}
-\include{ChapterX_CRP/CRP_SupplementaryNotes1}
-\include{ChapterX_Modeling/Nghe_model_cAMP_v5} % This used to be a separate chapter, but is now included as notes to the CRP chapter
-\include{ChapterX_CRP/CRP_SupplementaryNotes3}
-\include{ChapterX_CRP/CRP_SupplementaryFigures}
-\include{ChapterX_CRP/CRP_SupplementaryTables}
+%\include{ChapterX_CRP/CRP_main} %\label{chapter:CRP}
+%\include{ChapterX_CRP/CRP_SupplementaryNotes1}
+%\include{ChapterX_Modeling/Nghe_model_cAMP_v5} % This used to be a separate chapter, but is now included as notes to the CRP chapter
+%\include{ChapterX_CRP/CRP_SupplementaryNotes3}
+%\include{ChapterX_CRP/CRP_SupplementaryFigures}
+%\include{ChapterX_CRP/CRP_SupplementaryTables}
 
 % RIBOSOMES
-\include{ChapterX_Ribosomes/ChapterX_Ribosomes}
+%\include{ChapterX_Ribosomes/ChapterX_Ribosomes}
 
 % CONCLUSION
 \include{ChapterX_Conclusion/ChapterX_Conclusion}
+\include{ChapterX_Conclusion/ChapterX_Conclusion_NL}
 
 
 %%%%%%% MISC OTHER PARTS AT THE END OF THE THESIS
@@ -174,8 +176,7 @@
 \bibliographystyle{Style/bibstyle_dissertation}
 
 %******************
-% THanks etc..
-%- \include{Summary/summary} % English and Dutch
+% THanks etc.. (Note: CV is obligatory also!)
 %\include{Acknowledgements/acknowledgements} % ALREADY PARTIALLY WRITTEN!
 %- \include{Publications/publications}
 %- \include{Cv/cv}
