--- a/Thesis/Cv/cv.tex
+++ b/Thesis/Cv/cv.tex
@@ -6,37 +6,39 @@
 \addcontentsline{toc}{chapter}{Curriculum vitae}
 
 
-Martijn Wehrens (April 3rd, 1986) was born in Nijmegen, where he also attented high school 
+Martijn Wehrens (April 3rd, 1986) was born in Nijmegen, where he attented high school 
 at the \textit{Nijmeegse Scholengemeenschap Groenewoud}.
 %
 He always had an interest in science and technology, 
-and at that time for example worked on building and programming moving little machines at an engineering club.
+and at that time for example working on building and programming moving little machines at an engineering club.
 %
 To understand the most complicated machine of all, life, he started to study biology at the Radboud University in Nijmegen in 2004.
 %
 In 2007 he realized that to fully grasp fundamental processes in the biological cell, 
 one should delve deeper into the biochemical processes that go on in the cell.
 %
-%He therefor also joined the chemistry bachelor program.
-He therefore also started to study chemistry. 
+%He therefore also joined the chemistry bachelor program.
+Therefore, he began to 
+%He therefore also started to 
+study chemistry. 
 %
-Next to his studies he also participated in the Honours program, with elective courses on free will, holy texts, community, and economics; 
+In addition to his studies he also participated in the Honours program, with elective courses on free will, holy texts, community, and economics; 
 % Gemeenschap en Utopie, Concepten van de vrije wil, Heilige teksten, Cultuur en Economie
-worked as editor for student magazine ANS; and was a member of the students council.
+worked as editor for the student magazine ANS; and was a member of the student council.
 %
 After finishing both the biology and chemistry bachelor program in 2010, he wanted to further understand the cell at the fundamental level.
 %
-He therefor joined the MSc program in chemistry at the University of Amsterdam.
+He therefore joined the MSc program in chemistry at the University of Amsterdam.
 %
 During this theoretical program he focused on computer simulations of chemical processes.
 %
-This was also the topic of his MSc thesis, where he elaborated and used the eGFRD reaction-diffusion simulation algorithm to show that 
+This was also the topic of his MSc thesis, where he extended and used the eGFRD reaction-diffusion simulation algorithm to show that 
 positive feedback in chemical reactions can contribute to clustering of receptor molecules on the surface of biological cells. 
 %
 This research was done in the Biochemical Networks research group of Prof. Pieter Rein ten Wolde at the AMOLF research institute in Amsterdam.
 %
 After completing the MSc program in chemistry in 2013, he further pursued his interest in biochemical networks 
-and started to work as a PhD student in the Prof. Sander J. Tans Biophysics group at AMOLF in January of 2014. 
+by starting to work as a PhD student in the Prof. Sander J. Tans Biophysics group at AMOLF in January of 2014. 
 %
 The work on dynamical regulation in single cells he performed as a PhD student is described in this thesis.
 
@@ -106,4 +108,61 @@ The work on dynamical regulation in single cells he performed as a PhD student i
 %    \item[1998-2004] Nijmeegse Scholengemeenschap Groenewoud (high school). \\
 %    VWO level. Study programs "nature \& technology" and "nature \& biology".
 %\end{description}
+
+
+\chapter*{Publications by the author}
+\addcontentsline{toc}{chapter}{Publications by the author}
+
+% NOTE: I tried using the \bibentry package, but this didn't work, see comment in preamble
+
+\section*{Related to this thesis}
+
+%\bibentry{wehrens2018a} 
+\begin{itemize}
+%    \item[Chapter \ref{chapter:filarecovery}]
+    \item M. Wehrens, D. Ershov, R. Rozendaal, N. Walker, D. Schultz, R. Kishony, P. A. Levin,
+    and S. J. Tans, \textit{Size Laws and Division Ring Dynamics in Filamentous Escherichia coli
+    cells}, Current Biology , 1 (2018). \cite{Wehrens2018a} \\
+    https://doi.org/10.1016/j.cub.2018.02.006. \\
+    \textit{See chapter \ref{chapter:filarecovery}.}
+    %
+%    \item[Chapter \ref{chapter:literaturereview}]
+    \item  M. Wehrens, F. Buke, P. Nghe, and S. J. Tans, \textit{Stochasticity in cellular metabolism and
+    growth: Approaches and consequences}, Current Opinion in Systems Biology 8, 131
+    (2018). \cite{Wehrens2018} \\
+    http://doi.org/10.1016/J.COISB.2018.02.006. \\
+    \textit{See chapter \ref{chapter:literaturereview}.}
+    %
+\end{itemize}
+
+\section*{Other publications}
+
+\begin{itemize}
+    \item M. Wehrens, P. R. ten Wolde, and A. Mugler, \textit{Positive feedback can lead to dy-
+    namic nanometer-scale clustering on cell membranes}, Journal of Chemical Physics
+    141 (2014), 10.1063/1.4901888. \cite{Wehrens2014}
+    \item T. R. Sokolowski, J. Paijmans, L. Bossen, M. Wehrens, T. Miedema, N. B. Becker,
+    K. Kaizu, K. Takahashi, M. Dogterom, and P. R. ten Wolde, \textit{eGFRD in all dimensions},
+    arXiv (2017), arXiv:1708.09364. \cite{Sokolowski2017} \\
+    \textit{Manuscript in preparation.}
+\end{itemize}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
