--- a/Thesis/PackagesNewCommands/packages_newcommands.tex
+++ b/Thesis/PackagesNewCommands/packages_newcommands.tex
@@ -46,7 +46,9 @@
 % red text
 \newcommand{\blue}[1]{\textcolor{blue}{#1}}
 % shortcut for underlining text and red
-\newcommand{\e}[1]{\textcolor{red}{#1}}
+%\newcommand{\e}[1]{\textcolor{red}{#1}} % DISABLED TO MAKE TEXT BLACK AGAIN
+\newcommand{\e}[1]{{#1}}
+\newcommand{\ee}[1]{\textcolor{red}{#1}}
 % missing reference. set argument to empty if ref. not known
 \newcommand{\missref}[1]{\ifthenelse{\equal{#1}{}}{\hl{[ref?]}}{\hl{[ref: #1 ]}}}
 
