(update) major changes backlog

--- a/Thesis/Acknowledgements/acknowledgements.tex
+++ b/Thesis/Acknowledgements/acknowledgements.tex
@@ -4,6 +4,7 @@
 
 \chapter*{Acknowledgements}
 \addcontentsline{toc}{chapter}{Acknowledgements}
+\setheader{Acknowledgements}
 
 Not only the nature of the work, but also the environment in which you work is important for your motivation and happiness.
 %
@@ -12,7 +13,9 @@ a lively social scene and
 is populated by friendly and helpful people.
 
 
-
+%Sander
+%> To search for the key question
+%> To look for the interesting story
 First and foremost I'd like to thank Sander here, 
 for providing me the opportunity to work on the fascinating topics described in this thesis and being my mentor the past years.
 %as he 
@@ -35,7 +38,7 @@ but perhaps another, more interesting one.
 %
 Cynics might call this quality salesmanship,
 but I think that undervalues the importance
-of being able to assess the value of features that we observe in our scientific data and place it in a larger context.
+of being able to assess the value of features that we observe in our scientific data and place them in a larger context.
 
 % PROFESSIONAL "FRIENDS" FROM GROUP
 
@@ -54,18 +57,41 @@ I also greatly enjoyed our political discussions.
 Ferhat, without you the device that I mundanely refer to as the "microfluidic device 2" would never have been a success,
 I really appreciate our collaboration, and your "let's do it" mentality. Glorious.
 %
+Vanda, thanks for all your hard work on the constructs, but more importantly
+I appreciate our conversations about miscellaneous life matters. 
+%
 Katja, I deeply appreciate your sharp mind and insightful observations; I am grateful for 
-our discussions (often at the coffee corner) where you often had great advice on professional/scientific matters. 
+our discussions (usually at the coffee corner) where you often had great advice on professional/scientific matters. 
 %
 Sebastian, thank you for your insightful input,
 and for being an example of how it sometimes works very well to be headstrong. 
 %
-Rutger, I thank your for your patience in explaining me experimental protocols; 
+Rutger R., I thank you for your patience in explaining me experimental protocols; 
 also, I have learned from your people skills.
+
+%x AMOLF
+%x Sander
+%x Ferhat
+%x Vanda
+%x katja taute
+%x sebastian gude
+%x Mario
+%x Eline
+%x (Roeland, Moshin, )
+%x david 
+%x Rebecca
+%x Xuan 
+%x Anne-Bart
+%x Florian
+%_ fatemeh
+%x (check lab page)
 
 % STUDENTS
 
-A special thanks goes out to the two students I had the privilege to supervise, Nick and Giulia.
+%> Giulia Bergamaschi
+%> Nick de Lange
+
+A special thanks goes out to the two students I had the privilege to supervise, Nick and Giulia B.
 %
 I hope you have learned from me.
 I have learned a tremendous deal from supervising you.
@@ -78,122 +104,260 @@ approach X or Y was the best.
 Nick, I greatly admire your work ethics and skill in the lab, 
 and greatly appreciate your positive attitude.
 %
-Giulia, I really enjoyed our discussions,
-both on science and life in general,
-you have a very sharp mind.
+Giulia B., I really enjoyed our discussions,
+both on science and life in general.
+Thanks for sharing your sharp mind.
 
+% SOCIAL PEOPLE FROM GROUP
+
+Fatemeh, % you illustrated the hospitality of the Iranian people,
+I enjoyed our insightful (political) discussions.
+% iran nuanced
+%
+Mario, thanks for making sure there was always the right music to dance to.
+%
+Eline, wherever we end up in our future careers, at least we can have lab outing event planning as backup career.
+%
+Xuan, Anne-Bart, Florian, take good care of the legendary office 1.37! 
+%
+And thanks to all the other (former) colleagues in the Tans lab for making the lab a bit more smart and colorful:
+%
+Rebecca, Roeland, Moshin and David.
+
+%x (Roeland, Moshin, )
+%x david minde
+%x Xuan 
+%x Anne-Bart
+%x Florian
+%/ (check lab page)
 
 % COLLABORATORS
 
-> Laurens Krah
-> Benjamin Towbin
-> Petra
-> Rutger Hermsen
-\red{+andrew?}
+I also like to thank some people from outside AMOLF. 
+% Laurens Krah
+Laurens, I enjoyed our brainstorm sessions, 
+it was a great pleasure to think about cellular dynamics with you.
+%
+% Rutger Hermsen
+Rutger H., thank you for sharing your sharp insights.
+%
+% Benjamin Towbin
+Benjamin, thanks for helpful discussions, 
+it was great meeting you in Heidelberg.
+%
+Also thanks to Brian Munsky,
+who put his heart in organizing a great, fun summer school at CSU in Fort Collins, CO,
+which helped greatly in developing theoretical aspects of my research.
+%which helped me greatly with and gave me confidence in theoretical aspects of my research.
+%
+Petra,
+not often does a PhD student get a professor as student; 
+it was great fun showing you our setups and analysis. 
+Moreover thanks for the opportunity to visit your lab and hosting Sonja and me
+in St. Louis; this was a great experience.
+I hope I can become as open minded and enterprising in both family and lab life as you. 
+Thanks for all your helpful input and advice. 
+%
+
+%X Laurens Krah
+%X Benjamin Towbin
+%X Petra
+%X Rutger Hermsen
+
+
+
+% FRIENDS
+
+AMOLF, providing friendly people, is an excellent place to make friends.
+%
+I am very greatful that I become good friends with 
+%I am greatful to get to know 
+Joris, Noreen, Adithya, Stephen, Thomas and Johannes.
+%
+With the first five, I did not only spend many boardgame evenings, 
+escaped from many escape rooms, 
+and discovered great Dutch nature.
+%
+Moreover we often enjoyed lively conversations about many topics, 
+and shared many frustrations and accomplishments.
+%
+Is it done Joris? No comrade premier, it has only begun. 
+(Thanks Joris, you were a huge factor in making my years at AMOLF so great!) 
+%
+Noreen, I secretly think you're the best boardgame player.
+I admire your resolve and discipline. 
+%
+Adithya, you make the magic happen. I'm jealous of that ability.
+Thanks for all our extensive conversations, your advice is invaluable. 
+%
+Stephen, I could not have wished for a better person to share a home with.
+%Also, thanks for all the good career advices. 
+%Also, thanks for all the professional advice.
+%
+Thomas, I envy your ability to listen, analyze and make concise arguments in split seconds.
+%
+Johannes, once \textit{sjaars} (freshman) in office 1.37, I'm happy you were quickly part of our office's old boys club.
+Though superficially it might appear we have different views on many matters, 
+%we have many things in common.
+we have a shared passion for political debate, sound reasoning based on facts, and getting to the bottom of things.
+%
+I'm sure killing plants is unethical though.
+
+%x Joris
+%x Noreen
+%x Stephen
+%x Adithya
+%x Thomas Ouldride/Addenbrook *anecdote my system of names?* + Christina
+%x Johannes
+%x Agata
+
+And of course I thank all other people that gave office 1.37 its unique atmosphere.
+Mark, 
+thanks for being the office mate with whom I could finally talk to on \textit{vpro grachtengordel elite} level.
+%thanks for bringing a hardcore physics/chemistry project to our office.
+%it was great to have a fellow vpro-decorrespondent-grachtengordel 
+And also Rik,
+Robin, 
+Esther, 
+and Roland %Dries
+ --- it was great sharing the office with you!
+
+%Joris
+%Johannes
+%Mark
+%Rik
+%Robin
+%Esther
+%Roland Dries
+
+Furthermore, importantly, 
+Agata, we had similar experiences. We started together at AMOLF and ended together.
+Thanks for the great conversations about both our journeys.
+And many thanks for helping me ski a little bit better! 
+%
+Nicola, many thanks for your hospitality, 
+and thanks for tolerating my slow skiing, especially when hung over.
+%
+Thanks also to
+Harmen, 
+Yuval, 
+Simone K., 
+Federica, 
+Bart, 
+Christina, 
+Magdalena, 
+Jeanette, 
+Matthijs, 
+Viktoria, 
+Michele, 
+Jacopo, 
+Giulia M.,
+Anders,
+Simone B.,
+Marjolein and
+Yvonne --- who each uniquely contributed to making life in and around AMOLF great.
+
+% PV PEOPLE
+
+A special thanks also to
+Floortje, Niels, Tom and Clyde,
+with whom I greatly enjoyed organizing AMOLF events in the \textit{peevee} (PV).
+%
+Floortje, I think you were a field marshal in a previous life,
+because organizing comes so natural to you.
+
+% COOL (SENIOR) AMOLFERS
+
+A great thing about AMOLF is that interaction between people is encouraged. 
+%
+Also research leaders often join for coffee break or lunch break, and contribute to lively discussions about the topic of the day.
+%
+Pieter Rein, Bela, Jeroen, and others, I hope you keep up this tradition.
+
+
+Also thanks to all great support staff,
+especially Hinco and Marko, who were always willing to help with any technical issues I experienced, 
+and always decently made sure the issue was solved properly.
+
+%x Pieter Rein
+%x Bela
+%x Jeroen
+
+%x Hinco
+%x Marko
+
+% SPECIAL PEOPLE
+
+A special thanks goes to Andrew Mugler, my supervisor during my MSc internship, 
+whose good example of dealing with the ups and downs of scientific progress 
+helped me to stay balanced during this PhD project.
+%
+
+% x Andrew?
+% x Brian Munsky
+
+A very special thanks also goes to the late At (Ton) de Waart,
+who applied the belief that anyone can understand anything 
+at a children's technical club, 
+where fantastical electronic, mechanical engineering and programming ideas came alive.
+I am indebted to your commitment. 
+
+% _ At (Ton) de Waart
+
+% OTHER PEOPLE NOT MENTIONED
+
+There are likely people that I have not mentioned here
+who have also contributed to making my PhD a great experience.
+Also to you, I am grateful.
+
+% FAMILY
+
+Finally, I thank my good friend Rob, for providing me with sometimes hard-needed distraction 
+and your sympathetic ear.
+
+Then, 
+I thank my parents, 
+who taught me the value of good education, 
+always wholeheartedly supported me throughout any endeavor 
+and encouraged my enthusiasm for science.
+%
+I thank my aunt Wilma, who also always encouraged me in my studies. 
+%
+I also thank my brother Erik.
+%It is amazing how you can be so different yet so alike at the same time.
+Our career paths are very different, 
+%but I think we are very similar, 
+but we think (and talk) very much alike, 
+which explains why we can have such comfortable conversations 
+in mutual understanding. 
+%
+And lastly, I thank my girlfriend Sonja.
+You understood what support I needed during setbacks and challenges,
+often tolerated my quirks (both general and PhD-related),
+and made sure accomplishments were celebrated accordingly. 
+I am also impressed with the level of insight you showed in my scientific projects. 
+You even pointed out a mistake in one of my presentations.
+%
+I conclude these acknowledgments with the observation that 
+we met at the end of this adventure of mine,
+but we are just starting a new adventure together.
+
+
+
+%Parents
+%Sonja
+
+
+% xxx MENTION??? xxx
+
+%? simone boskamp
+%? yvonne
+%? marjolein
 
 
 
 
 
-
-
-%Sander
-%> To search for the key question
-%> To look for the interesting story
-
-
-
-\section*{Names}
-
-Don't forget:
-
-
-
-Remember to thank:
-> At (Ton) de Waart
-> Giulia Bergamaschi
-> Nick de Lange
-> Andrew Mugler [attitude towards science]
-> Brian Munsky
-
-
-> Laurens Krah
-> Benjamin Towbin
-> Petra
-> Rutger Hermsen
-
-Sander
-
-AMOLF
-
-Ferhat
-Vanda
-katja taute
-sebastian gude
-Mario
-Eline
-(Roeland, Moshin, )
-david 
-Rebecca
-Xuan 
-Anne-Bart
-Florian
-(check lab page)
-
-Joris
-Johannes
-Mark
-Rik
-Robin
-Esther
-Roland Dries
-
-(Joris)
-Noreen
-Stephen
-Adithya
-Thomas Ouldride/Addenbrook *anecdote my system of names?* + Christina
-Agata
-
-Floortje
-Niels
-Tom
-Clyde
-
-Nicola
-simone kienle
-yuval
-bart vos
-christina
-magdalena
-jeanette
-Matthijs
-Harmen
-Viktoria
-Michele
-Jacopo
-Giulia Malaguti
-Anders
-Fatemeh
-
-
-
-Pieter Rein
-Bela
-Tom
-
-
-
-simone boskamp
-yvonne
-
-
-Hinco
-Marko
-
-
-Parents
-Sonja
 
 
 
