--- a/Thesis/Cv/cv.tex
+++ b/Thesis/Cv/cv.tex
@@ -4,13 +4,13 @@
 
 \chapter*{Curriculum vitae}
 \addcontentsline{toc}{chapter}{Curriculum vitae}
+\setheader{Curriculum vitae}
 
-
-Martijn Wehrens (April 3rd, 1986) was born in Nijmegen, where he attented high school 
+Martijn Wehrens (April 3rd, 1986) was born in Nijmegen, where he attended high school 
 at the \textit{Nijmeegse Scholengemeenschap Groenewoud}.
 %
 He always had an interest in science and technology, 
-and at that time for example working on building and programming moving little machines at an engineering club.
+and was at that time for example working on building and programming moving little machines at an engineering club.
 %
 To understand the most complicated machine of all, life, he started to study biology at the Radboud University in Nijmegen in 2004.
 %
@@ -65,7 +65,7 @@ The work on dynamical regulation in single cells he performed as a PhD student i
         %\centering    
         %\includegraphics[width=1.0\textwidth]{pdf_2016-02-17_pos2_L31-mCerulean_clouds.pdf}
         \includegraphics{WehrensMartijn.jpg}
-        \caption*{\textbf{Martijn Wehrens}}
+        \caption*{\textbf{Martijn Wehrens.\\} {\tiny \textit{Photo by Wouter Harmsen.}}}
     \end{minipage}
 \end{figure}
 
