--- a/Thesis/PackagesNewCommands/packages_newcommands.tex
+++ b/Thesis/PackagesNewCommands/packages_newcommands.tex
@@ -48,7 +48,8 @@
 % shortcut for underlining text and red
 %\newcommand{\e}[1]{\textcolor{red}{#1}} % DISABLED TO MAKE TEXT BLACK AGAIN
 \newcommand{\e}[1]{{#1}}
-\newcommand{\ee}[1]{\textcolor{red}{#1}}
+\newcommand{\ee}[1]{{#1}}
+%\newcommand{\ee}[1]{\textcolor{red}{#1}}
 % missing reference. set argument to empty if ref. not known
 \newcommand{\missref}[1]{\ifthenelse{\equal{#1}{}}{\hl{[ref?]}}{\hl{[ref: #1 ]}}}
 
