--- a/Thesis/Title/title_old.tex
+++ b/Thesis/Title/title_old.tex
@@ -57,34 +57,25 @@
 %% Apart from the names and dates, the following text is dictated by the
 %% promotieregelement.
 
-{\Large\titlefont\bfseries Dissertation}
+{\Large\titlefont\bfseries Proefschrift}
 
 \bigskip
 \bigskip
 
-%ter verkrijging van de graad van doctor
-for the purpose of obtaining the degree of doctor
+ter verkrijging van de graad van doctor
 
-%aan de Technische Universiteit Delft,
-at Delft University of Technology
+aan de Technische Universiteit Delft,
 
-%op gezag van de Rector Magnificus \textcolor{red}{Prof.dr.ir. T. H. J. J. van der Hagen,}
-by the authority of the Rector Magnificus Prof.dr.ir. T. H. J. J. van der Hagen;
+op gezag van de Rector Magnificus \textcolor{red}{Prof.dr.ir. T. H. J. J. van der Hagen,}
 
-%voorzitter van het College voor Promoties,
-%chair of the board for doctorates
-Chair of the Board for Doctorates
+voorzitter van het College voor Promoties,
 
-%in het openbaar te verdedigen op \textcolor{red}{weekdag XX januari 2019 om XX.XX uur}
-to be defended publicly on 
-
-Monday 4 March 2019 at 12:30 o'clock
+in het openbaar te verdedigen op \textcolor{red}{weekdag XX januari 2019 om XX.XX uur}
 
 \bigskip
 \bigskip
 
-%door
-by
+door
 
 \bigskip
 \bigskip
@@ -98,11 +89,10 @@ by
 \bigskip
 \bigskip
 
-Master of Science in Chemistry, %\\
-University of Amsterdam, the Netherlands
+Master of Science in Chemistry, \\
+Universiteit van Amsterdam, Nederland,
 
-%geboren te Nijmegen, Nederland.
-born in Nijmegen, the Netherlands
+geboren te Nijmegen, Nederland.
 
 %% Extra whitespace at the bottom.
 \vspace*{2\bigskipamount}
@@ -113,8 +103,7 @@ born in Nijmegen, the Netherlands
 \thispagestyle{empty}
 
 %% The following line is dictated by the promotieregelement.
-%\noindent Dit proefschrift is goedgekeurd door de promotor.
-\noindent This dissertation has been approved by the promotor.
+\noindent Dit proefschrift is goedgekeurd door de promotor.
 
 %% List the promotors (supervisors).
 %\medskip\noindent
@@ -123,29 +112,21 @@ born in Nijmegen, the Netherlands
 %\end{tabular}
 
 \bigskip
-%\noindent Samenstelling promotiecommissie bestaat uit:
-\noindent Composition of the doctoral committee: 
+\noindent Samenstelling promotiecommissie bestaat uit:
 
 %% List the committee members, starting with the Rector Magnificus and the
 %% promotor(s) and ending with the reserve members.
 \medskip\noindent
 \begin{tabular}{p{4cm}l}
-    Rector Magnificus, & chairperson \\
-    Prof. dr. ir. S. J. Tans & Delft University of Technology, \textit{promotor} \\
+    Rector Magnificus, & voorzitter \\
+    Prof. dr. ir. S. J. Tans & TU Delft, \textit{promotor} \\
 
     \medskip
-%    \mbox{\emph{onafhankelijke leden:}} & \\
-    \mbox{\emph{Independent members:}} & \\    
+    \mbox{\emph{onafhankelijke leden:}} & \\
 
-    Prof.dr.ir. J.J. Heijnen & Delft University of Technology \\
-    Prof. P. Nghe & ESPCI Paris, France \\
-    Prof.dr. L.W. Hamoen & University of Amsterdam \\     
-    Prof.dr. F.J. Bruggeman & Vrije Universiteit Amsterdam \\
-    Prof.dr. P.R. ten Wolde & Vrije Universiteit Amsterdam \\
-    Dr. R. Hermsen & Utrecht University \\  
-    Prof.dr. N.H. Dekker & Delft University of Technology, substitute member \\
-    
-
+    \red{Prof.\ dr.\ A. Bbbb} & \red{XX Universiteit} \\
+%(..) 
+    \red{Prof.\ dr.\ A. Bbbb} & \red{XX Universiteit, reservelid} \\
       
 \end{tabular}
 
@@ -163,7 +144,7 @@ born in Nijmegen, the Netherlands
 % AMOLF acknowledgment (NW2015-12-13: copied from intranet->library)
 % MW2018: now copied from https://intranet.amolf.nl/service/welcome-to-library-services/theses-isbn/
 \noindent The work described in this thesis was performed at AMOLF, Science Park 104, 1098 XG Amsterdam, The Netherlands.
-This work is part of the Netherlands Organisation for \mbox{Scientific} Research (NWO).
+This work is part of the Netherlands Organisation for Scientific Research (NWO).
 
 \vspace{2\bigskipamount}
 
@@ -175,7 +156,7 @@ This work is part of the Netherlands Organisation for \mbox{Scientific} Research
 
 \vspace{2\bigskipamount} %{4\bigskipamount}
 
-\noindent Copyright \textcopyright\ \red{2019} by M.~Wehrens
+\noindent Copyright \textcopyright\ \red{2018} by M.~Wehrens
 
 
 
