--- a/Thesis/chapter_CRP_wrapper.tex
+++ b/Thesis/chapter_CRP_wrapper.tex
@@ -1,6 +1,3 @@
-% Thesis Martijn Wehrens, 2014-2018
-% Template obtained from Noreen Walker, made by TU Delft and modified by her.
-
 \documentclass[nativefonts,print]{Style/class_dissertation}
 
 
@@ -128,18 +125,18 @@
 %% the title page (in title/title.tex) and in the metadata of the final PDF.
 %\title{Fluctuation and regulation}
 %\title{Dynamical regulation in bacterial cells}
-\title{Dynamical regulation in single cells}
-\author{Martijn}{Wehrens} %in title page: author added manually (uppercase!)
+%\title{Dynamical regulation in single cells}
+%\author{Martijn}{Wehrens} %in title page: author added manually (uppercase!)
 
 %% Use Roman numerals for the page numbers of the title pages and table of
 %% contents.
 \frontmatter
 
 % THIS IS THE TITLE PAGE (TO BE INCLUDED)
-\include{Title/title}
+%\include{Title/title}
 
-\setcounter{tocdepth}{1} % NW: don't incl subsections in TOC
-\tableofcontents
+%\setcounter{tocdepth}{1} % NW: don't incl subsections in TOC
+%\tableofcontents
 
 %% Use Arabic numerals for the page numbers of the chapters.
 \mainmatter
@@ -153,23 +150,6 @@
 
 %%%%%%% CHAPTERS (& PREFACE ETC)
 
-% FIRST CHAPTERS
-\thumbfalse
-\include{ChapterX_Summary/summary}
-\include{ChapterX_Summary/samenvatting}
-\thumbtrue
-%\chapter*{Propositions} \include{Chapter0_Preface_etc/propositions}
-\include{Chapter1_Introduction/chapter1_introduction}
-\include{Chapter1_Introduction/chapter1_introductie_NL}
-\include{Chapter2_Methods/chapter2_methods} % \label{chapter:methods}
-
-% FILA RECOVERY
-\include{ChapterX_Filarecovery/ChapterX_Filarecovery} % \label{chapter:filarecovery}
-\include{ChapterX_Filarecovery/SupplementalData_ThesisVersion}
-
-% LITERATURE REVIEW
-\include{ChapterX_Literaturereview/ChapterX_Literaturereview} % \label{chapter:literaturereview}
-
 % CRP chapter
 \include{ChapterX_CRP/CRP_main} %\label{chapter:CRP}
 \include{ChapterX_CRP/CRP_SupplementaryNotes1}
@@ -177,13 +157,6 @@
 \include{ChapterX_CRP/CRP_SupplementaryNotes3}
 \include{ChapterX_CRP/CRP_SupplementaryFigures}
 \include{ChapterX_CRP/CRP_SupplementaryTables}
-
-% RIBOSOMES
-\include{ChapterX_Ribosomes/ChapterX_Ribosomes}
-
-% CONCLUSION
-\include{ChapterX_Conclusion/ChapterX_Conclusion}
-\include{ChapterX_Conclusion/ChapterX_Conclusion_NL}
 
 
 %%%%%%% MISC OTHER PARTS AT THE END OF THE THESIS
@@ -205,8 +178,8 @@
 
 %******************
 % THanks etc.. (Note: CV is obligatory)
-\include{Acknowledgements/acknowledgements} 
-\include{Cv/cv}
+%\include{Acknowledgements/acknowledgements} 
+%\include{Cv/cv}
 
 \end{document}
 
