--- a/Thesis/title_wrapper.tex
+++ b/Thesis/title_wrapper.tex
@@ -1,5 +1,6 @@
-% Thesis Martijn Wehrens, 2014-2018
-% Template obtained from Noreen Walker, made by TU Delft and modified by her.
+% PARTS OF THE THESIS WHICH ARE COMMENTED OUT ONLY FOR SHORTNESS DURING WRITING PROCESS BUT HAVE TO BE INCLUDED LATER ARE COMMENTED OUT WITH "%blubb"
+% ALSO STUFF ONE HAS TO BE CAREFUL WITH IS COMMENTED WITH blubb
+
 
 \documentclass[nativefonts,print]{Style/class_dissertation}
 
@@ -135,78 +136,9 @@
 %% contents.
 \frontmatter
 
-% THIS IS THE TITLE PAGE (TO BE INCLUDED)
+% THIS IS THE WHOLE TITLE PAGE
 \include{Title/title}
 
-\setcounter{tocdepth}{1} % NW: don't incl subsections in TOC
-\tableofcontents
-
-%% Use Arabic numerals for the page numbers of the chapters.
-\mainmatter
-
-%% Turn on thumb indices.
-\thumbtrue
-
-% SPACING OPTIONS
-%\onehalfspacing
-%\doublespacing
-
-%%%%%%% CHAPTERS (& PREFACE ETC)
-
-% FIRST CHAPTERS
-\thumbfalse
-\include{ChapterX_Summary/summary}
-\include{ChapterX_Summary/samenvatting}
-\thumbtrue
-%\chapter*{Propositions} \include{Chapter0_Preface_etc/propositions}
-\include{Chapter1_Introduction/chapter1_introduction}
-\include{Chapter1_Introduction/chapter1_introductie_NL}
-\include{Chapter2_Methods/chapter2_methods} % \label{chapter:methods}
-
-% FILA RECOVERY
-\include{ChapterX_Filarecovery/ChapterX_Filarecovery} % \label{chapter:filarecovery}
-\include{ChapterX_Filarecovery/SupplementalData_ThesisVersion}
-
-% LITERATURE REVIEW
-\include{ChapterX_Literaturereview/ChapterX_Literaturereview} % \label{chapter:literaturereview}
-
-% CRP chapter
-\include{ChapterX_CRP/CRP_main} %\label{chapter:CRP}
-\include{ChapterX_CRP/CRP_SupplementaryNotes1}
-\include{ChapterX_Modeling/Nghe_model_cAMP_v5} % This used to be a separate chapter, but is now included as notes to the CRP chapter
-\include{ChapterX_CRP/CRP_SupplementaryNotes3}
-\include{ChapterX_CRP/CRP_SupplementaryFigures}
-\include{ChapterX_CRP/CRP_SupplementaryTables}
-
-% RIBOSOMES
-\include{ChapterX_Ribosomes/ChapterX_Ribosomes}
-
-% CONCLUSION
-\include{ChapterX_Conclusion/ChapterX_Conclusion}
-\include{ChapterX_Conclusion/ChapterX_Conclusion_NL}
-
-
-%%%%%%% MISC OTHER PARTS AT THE END OF THE THESIS
-
-%% Use letters for the chapter numbers of the appendices.
-\appendix
-%% Turn off thumb indices for unnumbered chapters and bibliography
-\thumbfalse
-
-
-% BIBLIOGRAPHY
-% include bibliography
-\bibliography{../library} 
-\bibliographystyle{Style/bibstyle_dissertation}
-    % carefully choose the .bib file 
-    % [see remarks in Bibliography folder]
-
-
-
-%******************
-% THanks etc.. (Note: CV is obligatory)
-\include{Acknowledgements/acknowledgements} 
-\include{Cv/cv}
 
 \end{document}
 
